--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -20,38 +20,26 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="212" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wv-IS-LPy">
                                 <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="84" id="4EH-L0-YU8"/>
-                                    <constraint firstAttribute="width" constant="111" id="Cbx-Hj-HTJ"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="degrees Fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GfH-0K-IGG">
-                                <frame key="frameInset" minX="113" minY="120" width="148" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GfH-0K-IGG">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C7I-YC-6cB">
-                                <frame key="frameInset" minX="158" minY="149" width="58" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C7I-YC-6cB">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9CI-q4-FHt">
-                                <frame key="frameInset" minX="129" minY="178" width="117" height="84"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9CI-q4-FHt">
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="degrees Celsius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EQv-IU-CBj">
-                                <frame key="frameInset" minX="126" minY="270" width="123" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celsius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EQv-IU-CBj">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -59,8 +47,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="7wv-IS-LPy" firstAttribute="centerX" secondItem="Cjz-qL-9Oq" secondAttribute="centerX" id="io2-wh-zyU"/>
-                            <constraint firstItem="7wv-IS-LPy" firstAttribute="top" secondItem="lgO-xb-aLo" secondAttribute="bottom" constant="8" id="wuE-Eq-vXH"/>
+                            <constraint firstItem="9CI-q4-FHt" firstAttribute="centerX" secondItem="7wv-IS-LPy" secondAttribute="centerX" id="5ch-cr-y00"/>
+                            <constraint firstItem="7wv-IS-LPy" firstAttribute="top" secondItem="lgO-xb-aLo" secondAttribute="bottom" constant="8" id="7jR-YB-ND1"/>
+                            <constraint firstItem="C7I-YC-6cB" firstAttribute="top" secondItem="GfH-0K-IGG" secondAttribute="bottom" constant="8" id="Ghh-30-Bow"/>
+                            <constraint firstItem="EQv-IU-CBj" firstAttribute="top" secondItem="9CI-q4-FHt" secondAttribute="bottom" constant="8" id="Hjf-9n-9Xm"/>
+                            <constraint firstItem="GfH-0K-IGG" firstAttribute="top" secondItem="7wv-IS-LPy" secondAttribute="bottom" constant="8" id="Lfk-CD-Vvm"/>
+                            <constraint firstItem="9CI-q4-FHt" firstAttribute="top" secondItem="C7I-YC-6cB" secondAttribute="bottom" constant="8" id="OOD-Kq-6ly"/>
+                            <constraint firstItem="7wv-IS-LPy" firstAttribute="centerX" secondItem="Cjz-qL-9Oq" secondAttribute="centerX" id="cZd-Im-L3t"/>
+                            <constraint firstItem="C7I-YC-6cB" firstAttribute="centerX" secondItem="7wv-IS-LPy" secondAttribute="centerX" id="eyW-lp-MQl"/>
+                            <constraint firstItem="GfH-0K-IGG" firstAttribute="centerX" secondItem="7wv-IS-LPy" secondAttribute="centerX" id="qjh-vp-wZA"/>
+                            <constraint firstItem="EQv-IU-CBj" firstAttribute="centerX" secondItem="7wv-IS-LPy" secondAttribute="centerX" id="yiW-Lj-fLW"/>
                         </constraints>
                     </view>
                 </viewController>
