--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1913" y="886"/>
+            <point key="canvasLocation" x="1351" y="940"/>
         </scene>
         <!--Map-->
         <scene sceneID="Q2M-5t-EYh">
@@ -93,7 +93,33 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SV6-hW-Ez2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1912.8" y="105.69715142428787"/>
+            <point key="canvasLocation" x="1871" y="-294"/>
+        </scene>
+        <!--Web-->
+        <scene sceneID="Qg8-Of-MUG">
+            <objects>
+                <viewController id="I3u-oi-Fuz" customClass="WebViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1Be-D0-yUG"/>
+                        <viewControllerLayoutGuide type="bottom" id="Alc-GG-0v8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zn8-I5-vC8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Dv-Pb-V01">
+                                <frame key="frameInset" minY="20" width="375" height="598"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Web" id="kbG-oj-xLK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OA4-98-vt4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2277.5999999999999" y="404.34782608695656"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="cJB-5d-2x9">
@@ -108,6 +134,7 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="CBD-Us-FbG"/>
                         <segue destination="ae7-fb-mWO" kind="relationship" relationship="viewControllers" id="9sj-PY-HNb"/>
+                        <segue destination="I3u-oi-Fuz" kind="relationship" relationship="viewControllers" id="f1l-74-Y6A"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UVp-hg-1jy" userLabel="First Responder" sceneMemberID="firstResponder"/>
